@@ -1,3 +1,5 @@
+* add canals to Great War and Big World (Black Elk)
+
 Changes for 0.9.0.2
 
 * fix bug [ 1640596 ] 0.9.0.1 Revised Map Wrap Issue (sgb)
